[gd_scene load_steps=14 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Maps/Map1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mobile/Player/Player1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mobile/Player/Player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interactable/Button/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interactable/WarningFloor/WarningFloor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Interactable/Warning/Warning.tscn" type="PackedScene" id=7]
[ext_resource path="res://Mobile/Boss/Boss.tscn" type="PackedScene" id=8]
[ext_resource path="res://Interactable/Platform/Platform.tscn" type="PackedScene" id=9]
[ext_resource path="res://Font.tres" type="DynamicFont" id=10]
[ext_resource path="res://Music/HeartBeat.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 100, 16.16 )

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 40, 24 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Map1" parent="." instance=ExtResource( 2 )]

[node name="Player1" parent="." instance=ExtResource( 3 )]
position = Vector2( 55.0573, 179.916 )
ui_health_label = NodePath("../CanvasLayer/VBoxContainer/HBoxContainer/Health1")

[node name="Player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 70.0007, 179.92 )
ui_health_label = NodePath("../CanvasLayer/VBoxContainer/HBoxContainer/Health2")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( -42, 0 )
anchor_mode = 0
current = true
zoom = Vector2( 0.18, 0.18 )

[node name="StartEngagementButton1" parent="." instance=ExtResource( 5 )]
position = Vector2( 36, 179.916 )

[node name="StartEngagementButton2" parent="." instance=ExtResource( 5 )]
position = Vector2( 220, 179.916 )

[node name="EngageParticles" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 124, 179.916 )

[node name="WarningFloor19" parent="EngageParticles" instance=ExtResource( 6 )]
position = Vector2( -16, 0.00393677 )

[node name="WarningFloor20" parent="EngageParticles" instance=ExtResource( 6 )]
position = Vector2( -8.00002, 0.00393677 )

[node name="WarningFloor21" parent="EngageParticles" instance=ExtResource( 6 )]
position = Vector2( 0, 0.00393677 )

[node name="WarningFloor22" parent="EngageParticles" instance=ExtResource( 6 )]
position = Vector2( 8, 0 )

[node name="WarningFloor23" parent="EngageParticles" instance=ExtResource( 6 )]
position = Vector2( 16, 0 )

[node name="WarningFloor24" parent="EngageParticles" instance=ExtResource( 6 )]
position = Vector2( 24, 0 )

[node name="Warning3" parent="EngageParticles" instance=ExtResource( 7 )]
position = Vector2( 4.00002, -10.9163 )

[node name="Boss" parent="." instance=ExtResource( 8 )]
position = Vector2( 128, -26.95 )
startpos = NodePath("../BossStartPos")
pos2d_attack_up = NodePath("../BossUpPosition")
pos2d_enrage = NodePath("../BossDownPosition")
area_top_left_area = NodePath("../TopLeftArea")
area_top_right_area = NodePath("../TopRightArea")
pos2d_bullet_enrageL_pos1 = NodePath("../BossEnrageBulletPosL")
pos2d_bullet_enrageL_pos2 = NodePath("../BossEnrageBulletPosLEnd")
pos2d_bullet_enrageR_pos1 = NodePath("../BossEnrageBulletPosR")
pos2d_bullet_enrageR_pos2 = NodePath("../BossEnrageBulletPosREnd")
area_mid_area_l = NodePath("../MidAreaL")
area_mid_area_r = NodePath("../MidAreaR")
warning_center_warning = NodePath("../EngageParticles")
pos2d_egg_hit = NodePath("../EggHit")
pos2d_screen_hit = NodePath("../ScreenHit")
pos2d_topleft_button_pos = NodePath("../TopLeftButtonPos")
pos2d_topright_button_pos = NodePath("../TopRightButtonPos")
pos2d_boss_end_pos = NodePath("../BossEndPos")

[node name="BossStartPos" type="Position2D" parent="."]
position = Vector2( 128, 165 )

[node name="StartEngageWarning" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="Warning" parent="StartEngageWarning" instance=ExtResource( 7 )]
position = Vector2( 72.5952, 168.916 )

[node name="Warning2" parent="StartEngageWarning" instance=ExtResource( 7 )]
position = Vector2( 188, 168.916 )

[node name="WarningFloor" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 36, 179.92 )

[node name="WarningFloor11" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 156, 180.004 )

[node name="WarningFloor2" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 44, 179.92 )

[node name="WarningFloor15" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 164, 180.004 )

[node name="WarningFloor3" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 52.0573, 179.92 )

[node name="WarningFloor10" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 172.057, 180.004 )

[node name="WarningFloor4" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 60.0573, 179.916 )

[node name="WarningFloor13" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 180.057, 180 )

[node name="WarningFloor5" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 68, 179.92 )

[node name="WarningFloor12" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 188, 180.004 )

[node name="WarningFloor6" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 76, 179.92 )

[node name="WarningFloor14" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 196, 180.004 )

[node name="WarningFloor7" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 84, 179.92 )

[node name="WarningFloor16" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 204, 180.004 )

[node name="WarningFloor8" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 92, 179.916 )

[node name="WarningFloor17" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 212, 180 )

[node name="WarningFloor9" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 100, 179.916 )

[node name="WarningFloor18" parent="StartEngageWarning" instance=ExtResource( 6 )]
position = Vector2( 220, 180 )

[node name="Platform" parent="." instance=ExtResource( 9 )]
position = Vector2( 84, 165 )
start_off = true

[node name="Platform2" parent="." instance=ExtResource( 9 )]
position = Vector2( 172, 165 )
start_off = true

[node name="Platform3" parent="." instance=ExtResource( 9 )]
position = Vector2( 196, 132 )

[node name="Platform4" parent="." instance=ExtResource( 9 )]
position = Vector2( 188, 132 )

[node name="Platform5" parent="." instance=ExtResource( 9 )]
position = Vector2( 204, 100 )

[node name="Platform6" parent="." instance=ExtResource( 9 )]
position = Vector2( 52, 100 )

[node name="Platform7" parent="." instance=ExtResource( 9 )]
position = Vector2( 60.0573, 132 )

[node name="Platform8" parent="." instance=ExtResource( 9 )]
position = Vector2( 68, 132 )

[node name="Platform9" parent="." instance=ExtResource( 9 )]
position = Vector2( 68, 72 )

[node name="Platform10" parent="." instance=ExtResource( 9 )]
position = Vector2( 76, 72 )

[node name="Platform11" parent="." instance=ExtResource( 9 )]
position = Vector2( 180, 72 )

[node name="Platform12" parent="." instance=ExtResource( 9 )]
position = Vector2( 188, 72 )

[node name="BossUpPosition" type="Position2D" parent="."]
position = Vector2( 128, 76 )

[node name="BossDownPosition" type="Position2D" parent="."]
position = Vector2( 128, 136 )

[node name="BossEnrageBulletPosL" type="Position2D" parent="."]
position = Vector2( 68, 112 )

[node name="BossEnrageBulletPosLEnd" type="Position2D" parent="."]
position = Vector2( 67.6517, 186 )

[node name="BossEnrageBulletPosR" type="Position2D" parent="."]
position = Vector2( 188, 112 )

[node name="BossEnrageBulletPosREnd" type="Position2D" parent="."]
position = Vector2( 187.652, 186 )

[node name="BottomAreaHitBox" type="Area2D" parent="."]
position = Vector2( 128, 169 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomAreaHitBox"]
shape = SubResource( 1 )

[node name="TopLeftArea" type="Area2D" parent="."]
position = Vector2( 68, 72 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeftArea"]
shape = SubResource( 2 )

[node name="TopRightArea" type="Area2D" parent="."]
position = Vector2( 188, 72 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRightArea"]
shape = SubResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="MidAreaL" type="Position2D" parent="."]
position = Vector2( 70.0007, 128 )

[node name="MidAreaR" type="Position2D" parent="."]
position = Vector2( 187.652, 128 )

[node name="ShardPos1" type="Position2D" parent="."]
position = Vector2( 116, 112 )

[node name="ShardPos2" type="Position2D" parent="."]
position = Vector2( 124, 112 )

[node name="ShardPos3" type="Position2D" parent="."]
position = Vector2( 132, 112 )

[node name="ShardPos4" type="Position2D" parent="."]
position = Vector2( 140, 112 )

[node name="ShardPos5" type="Position2D" parent="."]
position = Vector2( 116, 120 )

[node name="ShardPos6" type="Position2D" parent="."]
position = Vector2( 124, 120 )

[node name="ShardPos7" type="Position2D" parent="."]
position = Vector2( 132, 120 )

[node name="ShardPos8" type="Position2D" parent="."]
position = Vector2( 140, 120 )

[node name="Tween" type="Tween" parent="."]

[node name="EggHit" type="Position2D" parent="."]
position = Vector2( 128, 160 )

[node name="ScreenHit" type="Position2D" parent="."]
position = Vector2( 128, 183.916 )

[node name="TopLeftButtonPos" type="Position2D" parent="."]
position = Vector2( 40, 68 )

[node name="TopRightButtonPos" type="Position2D" parent="."]
position = Vector2( 216, 68 )

[node name="BossEndPos" type="Position2D" parent="."]
position = Vector2( 128, 144 )

[node name="FinishButtonPos" type="Position2D" parent="."]
position = Vector2( 36, 181.305 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 55.0

[node name="Health1" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_right = 958.0
margin_bottom = 55.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0.368627, 1, 1 )
text = "Health: 5"

[node name="Health2" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 55.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0.788235, 1, 1 )
text = "Health: 5"
align = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 59.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 710.0
margin_top = 425.0
margin_right = 1209.0
margin_bottom = 596.0
custom_fonts/font = ExtResource( 10 )
text = "Game Over
You Saved Your Home
At The Cost of Your Life"
align = 1
valign = 1

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="MusicTimer" type="Timer" parent="."]
autostart = true

[connection signal="pushed" from="StartEngagementButton1" to="." method="_start_button_pressed"]
[connection signal="released" from="StartEngagementButton1" to="." method="_start_button_released"]
[connection signal="pushed" from="StartEngagementButton2" to="." method="_start_button_pressed"]
[connection signal="released" from="StartEngagementButton2" to="." method="_start_button_released"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_MusicPlayer_finished"]
[connection signal="timeout" from="MusicTimer" to="." method="_on_MusicTimer_timeout"]
